<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/background">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color_dark"
            android:textSize="@dimen/_12sdp"
            android:text="@string/event_title"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/_20sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_event_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/background_field"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/event_title"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:singleLine="true"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/event_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color_dark"
            android:textSize="@dimen/_12sdp"
            android:text="@string/event_description"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/event_value"
            android:layout_margin="@dimen/_20sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/event_description_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_event_description"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/background_field"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/event_description"
            android:layout_marginHorizontal="@dimen/_20sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gregorian_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color_dark"
            android:textSize="@dimen/_12sdp"
            android:text="@string/gregorian_date"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/event_description_value"
            app:layout_constraintEnd_toStartOf="@id/hijri_date"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hijri_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color_dark"
            android:textSize="@dimen/_12sdp"
            android:text="@string/hijri_date"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/event_description_value"
            app:layout_constraintStart_toEndOf="@id/gregorian_date"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_20sdp"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/gregorian_date_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/background_field"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/gregorian_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/hijri_date_value"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:focusable="false"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/hijri_date_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/background_field"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@id/gregorian_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gregorian_date_value"
            android:layout_marginEnd="@dimen/_20sdp"
            android:clickable="false"
            android:focusable="false"
            android:enabled="false"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:textAllCaps="false"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/background_button"
            app:layout_constraintBottom_toTopOf="@id/delete_btn"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/primary_color_dark"
            android:textSize="@dimen/_12sdp"
            android:textAllCaps="false"
            android:layout_margin="@dimen/_20sdp"
            android:background="@drawable/background_field"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>