<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:cardCornerRadius="@dimen/_20sdp"
        android:backgroundTint="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/languages"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/primary_color_dark"
            android:layout_marginTop="@dimen/_25sdp"/>

            <RadioGroup
                android:id="@+id/languages_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/title"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/_25sdp"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primary_color_dark"
                    android:text="@string/english"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/arabic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/primary_color_dark"
                    android:text="@string/arabic"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </RadioGroup>

            <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/languages_options"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/apply"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/_12sdp"
            android:gravity="center"
            android:background="@drawable/background_button"
            android:layout_marginTop="@dimen/_25sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>