<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="event"
            type="com.example.mstartkotlintask_hussam.model.beans.events.Event" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_20sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/event_title"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/primary_color_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@{event.eventName}"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toStartOf="@id/edit_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/event_description"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            android:textColor="@color/primary_color_dark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@{event.eventDescription}"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/description"
            app:layout_constraintTop_toTopOf="@id/description"
            app:layout_constraintBottom_toBottomOf="@id/description"
            app:layout_constraintEnd_toStartOf="@id/edit_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gregorian_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/gregorian_date"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/primary_color_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gregorian_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@{event.gregorianDate}"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/gregorian_date"
            app:layout_constraintTop_toTopOf="@id/gregorian_date"
            app:layout_constraintBottom_toBottomOf="@id/gregorian_date"
            app:layout_constraintEnd_toStartOf="@id/edit_icon"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hijri_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/hijri_date"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/primary_color_dark"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gregorian_date"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/hijri_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:text="@{event.hijriDate}"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/hijri_date"
            app:layout_constraintTop_toTopOf="@id/hijri_date"
            app:layout_constraintBottom_toBottomOf="@id/hijri_date"
            app:layout_constraintEnd_toStartOf="@id/edit_icon"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/edit_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/delete_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_icon"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/primary_color_dark"
            android:layout_marginHorizontal="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hijri_value"
            android:layout_marginTop="@dimen/_10sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
